@@ -115,6 +115,7 @@ private:
 	std::stack<string> ppstack;
 	std::weak_ptr<i_execution_context> m_ExecutionContext;
 	std::shared_ptr<i_execution_context> m_PluginExecutionContext;
+	unsigned m_PluginExecutionContextInvocations{};
 };
 
 #endif // CMDLINE_HPP_7E68C776_4AA9_4A24_BE9F_7F7FA6D50F30
