@@ -1,3 +1,9 @@
+drkns 29.06.2016 21:51:02 +0200 - build 4730
+
+1. Продолжение экспериментов:
+   - вложенные вызовы FCTL_<G|S>ETUSERSCREEN можно.
+   - поддержка FCTL_SETUSERSCREEN без предварительного FCTL_GETUSERSCREEN (раньше работало).
+
 drkns 29.06.2016 09:41:59 +0200 - build 4729
 
 1. 'Защита' от вложенных вызовов FCTL_<G|S>ETUSERSCREEN.
